--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx @tailwindcss/cli -i ./app/static/css/input.css -o ./app/static/css/style.css --watch"
+  "dev": "npm run dev --prefix frontend",
+  "build": "npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
